--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <!--CSS-->
     <link rel="stylesheet" href="style.css" />
     <title>Disney</title>
   </head>
@@ -12,9 +20,9 @@
     <header>
       <nav>
         <ul>
-          <li class="menu"><a href="">Início</a></li>
-          <li class="menu"><a href="">Filmes</a></li>
-          <li class="menu"><a href="">Séries</a></li>
+          <li class="menu"><a href="#">Início</a></li>
+          <li class="menu"><a href="#">Filmes</a></li>
+          <li class="menu"><a href="#">Séries</a></li>
         </ul>
       </nav>
     </header>
@@ -22,36 +30,50 @@
     <!--MAIN-->
     <main>
       <section>
-        <figure>
-          <img class="disney" src="img/disney-banner 1.svg" alt="" />
+        <figure class="disney">
+          <img class="disney" src="img/disney-banner 1.svg" alt="Disney" />
         </figure>
       </section>
 
-      <section class="box-img">
+      <section>
         <figure>
-          <img class="card-img" src="img/encanto 1.png" alt="" />
-          <img class="card-img" src="img/raya 1.png" alt="" />
-          <img class="card-img" src="img/buzz 1.png" alt="" />
+          <img class="card-img" src="img/encanto 1.png" alt="cartaz" />
+        </figure>
+        <figure>
+          <img class="card-img" src="img/raya 1.png" alt="cartaz" />
+        </figure>
+        <figure>
+          <img class="card-img" src="img/buzz 1.png" alt="cartaz" />
         </figure>
       </section>
-      <section class="box-img">
+
+      <section>
         <figure>
-          <img class="card-img" src="img/toy 1.png" alt="" />
-          <img class="card-img" src="img/irmao-urso 1.png" alt="" />
-          <img class="card-img" src="img/luca 1.png" alt="" />
+          <img class="card-img" src="img/toy 1.png" alt="cartaz" />
+        </figure>
+        <figure>
+          <img class="card-img" src="img/irmao-urso 1.png" alt="cartaz" />
+        </figure>
+        <figure>
+          <img class="card-img" src="img/luca 1.png" alt="cartaz" />
         </figure>
       </section>
     </main>
 
     <!--FOOTER-->
     <footer>
-      <figure>
-        <figcaption class="tag">
-          © Disney © Disney•Pixar © & ™ Lucasfilm LTD © 2022 MARVEL. Reservados
-          todos os direitos, Disney Entertainment
-        </figcaption>
+      <p class="direitos">
+        © Disney © Disney•Pixar © & ™ Lucasfilm LTD © 2022 MARVEL. Reservados
+        todos os direitos, Disney Entertainment
+      </p>
+
+      <figure class="icons">
         <img class="icons" src="img/youtube--v1 1.png" alt="" />
+      </figure>
+      <figure class="icons">
         <img class="icons" src="img/Vector.png" alt="" />
+      </figure>
+      <figure class="icons">
         <img class="icons" src="img/disney-plus 1.png" alt="" />
       </figure>
     </footer>
